--- a/casadocodigo/package.json
+++ b/casadocodigo/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "consign": "^0.1.6",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mysql": "^2.15.0",
